2010-10-24  Daniel Bates  <dbates@rim.com>

        Reviewed by David Kilzer.

        Fix Perl uninitialized warnings in VCSUtils::svnStatus()
        and VCSUtils::removeEOL().
        https://bugs.webkit.org/show_bug.cgi?id=48196

        VCSUtils::svnStatus() concatenates the output of svn status with
        a new line character and svn status may return no output (say for
        a file that has not been added, deleted, or modified). We should
        only concatenate the output of svn status if there is some.

        Also, VCSUtils::removeEOL() should ensure that its argument
        is initialized before performing a string substitution.

        * Scripts/VCSUtils.pm:
          - Modified removeEOL() to return "" if its argument is undefined.
          - Exported removeEOL() so that it can be tested. 
        * Scripts/webkitperl/VCSUtils_unittest/removeEOL.pl: Added.

2010-10-24  David Kilzer  <ddkilzer@apple.com>

        <http://webkit.org/b/48185> build-webkit: add support for --progress-tag switch

        Reviewed by Kenneth Rohde Christiansen.

        * Scripts/build-webkit: Added support for --progress-tag switch.
        It should have been added with r57051.

2010-10-24  David Kilzer  <ddkilzer@apple.com>

        <http://webkit.org/b/48184> build-webkit: reformat support variables for better maintainability

        Reviewed by Daniel Bates.

        * Scripts/build-webkit: Alphabetized the @features array based
        on the name of the feature.  Reformatted the list of support
        variables so that they match the order of @features, and so that
        each has its own line.  This makes it easy to add new variables
        in the correct order.

2010-10-23  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        EWS never removes invalid patch ids
        https://bugs.webkit.org/show_bug.cgi?id=48173

        This is just sticking another finger in the dam.
        However this adds more unit testing which will help