@@ -1,3 +1,15 @@
+2010-10-24  Yi Shen  <yi.4.shen@nokia.com>
+
+        Reviewed by Andreas Kling.
+
+        [Qt][QtTestBrowser] Toggle use of QGraphicsView messes up the menu
+        https://bugs.webkit.org/show_bug.cgi?id=48141
+
+        * QtTestBrowser/launcherwindow.cpp:
+        (LauncherWindow::init):
+        (LauncherWindow::initializeView):
+        (LauncherWindow::toggleWebView):
+
 2010-10-24  Daniel Bates  <dbates@rim.com>
 
         Reviewed by David Kilzer.
